@@ -1,3 +1,6 @@
+05/13/20
+  - Fixed PylogixTests.py imports
+
 05/11/20
   - Default to LargeForwardOpen, fall back on ForwardOpen
   - Restructured some code, cleanup
